--- a/web/components/switch.css
+++ b/web/components/switch.css
@@ -1,4 +1,5 @@
-   /* CheckBox */
+/* CheckBox */
+/* CSS to make a switch styled button */
 
 .switch {
     position: absolute;
@@ -7,20 +8,17 @@
     display: inline-block;
     width: 60px;
     height: 34px;
+}
 
-  }
-
-  /* Hide default HTML checkbox */
-  .switch input {
-
+/* Hide default HTML checkbox */
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
+}
 
-  /* The slider */
-  .slider {
-
+/* The slider */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -28,11 +26,11 @@
     right: 0;
     bottom: 0;
     background-color: #ccc;
-    -webkit-transition: .1s;
-    transition: .1s;
-  }
+    -webkit-transition: 0.1s;
+    transition: 0.1s;
+}
 
-  .slider:before {
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -40,31 +38,31 @@
     left: 4px;
     bottom: 4px;
     background-color: white;
-    -webkit-transition: .1s;
-    transition: .1s;
-  }
+    -webkit-transition: 0.1s;
+    transition: 0.1s;
+}
 
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
+input:checked + .slider {
+    background-color: #2196f3;
+}
 
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+}
 
-  input:checked + .slider:before {
+input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
-  .label.switch{
-    margin-bottom: 150%!important;
-  }
-  /* Rounded sliders */
-  .slider.round {
+}
+.label.switch {
+    margin-bottom: 150% !important;
+}
+/* Rounded sliders */
+.slider.round {
     border-radius: 34px;
-  }
+}
 
-  .slider.round:before {
+.slider.round:before {
     border-radius: 50%;
-  }
+}
